--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #333;
+    color: aliceblue;
+}
+
 .mainComponent {
     display: flex;
     flex-wrap: wrap;
@@ -46,7 +51,7 @@ img:hover {
     padding: 10px;
     width: 400px;
     height: 600px;
-
+    color: #333;
     border-radius: 10px;
 
     overflow: hidden;
@@ -81,4 +86,63 @@ img:hover {
         animation-timing-function: ease-out;
         transform: scale(1);
     }
+}
+
+
+.article {
+
+    border: 2px solid rgb(14, 9, 62);
+    background-color: azure;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    color: #333;
+
+}
+
+.articlePostDate {
+    font-style: italic;
+}
+
+.form {
+    border: 2px solid rgb(62, 9, 23);
+    background-color: rgb(171, 234, 234);
+    display: block;
+    border-radius: 10px;
+    padding: 10px;
+    color: #333;
+}
+
+.articleInput {
+    width: max-content;
+}
+
+.articleText {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
 }
